Fix spacing in footer

--- a/src/styles/components/_article-footer.scss
+++ b/src/styles/components/_article-footer.scss
@@ -31,7 +31,7 @@
     margin-block-end: $space-base;
 
     @include tablet {
-      margin-block-end: $space-xl;
+      margin-block: 40px 32px;
     }
   }
 
