--- a/src/styles/layouts/_contact-page.scss
+++ b/src/styles/layouts/_contact-page.scss
@@ -7,7 +7,6 @@
     rgba(240, 246, 253, 1) 50%,
     rgba(255, 255, 255, 0) 100%
   );
-  margin-bottom: $space-4xl;
 
   @include tablet {
     display: flex;
