--- a/src/styles/layouts/_footer.scss
+++ b/src/styles/layouts/_footer.scss
@@ -6,8 +6,7 @@
     display: flex;
     flex-direction: column;
     gap: $gap-xl;
-    padding-block: $space-xl;
-    margin-bottom: $space-xl;
+    padding-block: 0 $space-xl;
 
     @include tablet {
       padding-block: $space-4xl $space-5xl;
@@ -23,7 +22,6 @@
     @include tablet {
       flex-direction: row;
       justify-content: space-between;
-      margin-top: $space-6xl;
     }
   }
 
